# 2048-cpp

./: .gitignore  CMakeLists.txt  README.md  cli.cpp  cli.h  logic.cpp  main.cpp
cli/: .gitignore  CMakeLists.txt  main.cpp
